Adding script.js and style.css to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<html>this is the homepage</html>
+<!DOCTYPE html>
+<html>
+<head>
+<title>GIMP Documentation</title>
+<script src="script.js"></script>
+<style src="style.css"></style>
+</head>
+
+<body>
+This is the body.
+</body>
+
+</html>
