Zach's first changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>GIMP Documentation</title>
-<script src="script.js"></script>
-<style src="style.css"></style>
+    <title>GIMP Documentation</title>
+    <script src="script.js"></script>
+    <style src="style.css"></style>
 </head>
 
 <body>
-This is the body.
+    <div>
+        This is the body. 
+    </div>
 </body>
 
 </html>
